<resources>
    <string name="app_name">Formulario_v</string>
    <string name="hint_name">Nombre Completo</string>
    <string name="hint_email">Correo electronico</string>
    <string name="hint_Edad">Edad</string>
    <string name="hint_tel">Numero de telefono</string>
    <string name="genero">Genero: </string>
    <string name="text_checkbox_1">Mensaje para CheckBox</string>
    <string name="enviar_datos">Enviar datos</string>
    <string name="text_checkbox_femele">Mujer</string>
    <string name="text_checkbox_male">Hombre</string>
    <string name="text_checkbox_omitir">No Binario</string>
    <string name="hint_dir">Direccion</string>
    <string name="hint_date">DD/MM/AAAA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Limpiar_datos">Limpiar Formulario</string>
    <string name="Editar">Editar Datos</string>
    <string name="confirmarDatos">Confirmar los datos</string>
    <string name="editar_datos">Editar Registro</string>
    <string name="eliminar_datos">Elminar Registro</string>
    <string name="buscar">Buscar Registro</string>
    <string name="volver">Volver Atras</string>
    <string name="guardar">Guardar</string>
</resources>