<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="@dimen/common_padding_default"
    tools:context=".ActivityVerDatos">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombre"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:textColorHint="#070707"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#070707"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_marginTop="@dimen/common_padding_default"
        app:endIconMode="clear_text"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_dir"
        app:endIconMode="clear_text"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEdad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_Edad"
            android:layout_marginEnd="@dimen/common_padding_min"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tilKey"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/etNtelefono"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilKey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tel"
            android:layout_marginStart="@dimen/common_padding_min"
            app:layout_constraintStart_toEndOf="@id/tilEdad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNtelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date"
        app:endIconMode="clear_text"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar_datos"
        app:icon="@drawable/ic_edit"
        app:iconGravity="textEnd"
        app:toggleCheckedStateOnClick="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_datos"
        app:icon="@drawable/ic_clear"
        app:iconGravity="textEnd"
        app:toggleCheckedStateOnClick="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        app:iconGravity="textEnd"
        app:icon="@drawable/ic_back"
        app:toggleCheckedStateOnClick="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:iconGravity="textEnd"
        app:icon="@drawable/ic_save"
        app:toggleCheckedStateOnClick="false"
        android:enabled="false" />


</LinearLayout>